--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/greetings.js" defer></script>
+    <script src="js/clock.js" defer></script>
+    <script src="js/quotes.js" defer></script>
+    <script src="js/background.js" defer></script>
+    <script src="js/todo.js" defer></script>
     <title>MOMENTUM APP</title>
   </head>
-  <body></body>
+  <body>
+    <form id="login-form" class="hidden">
+      <input
+        type="text"
+        required
+        maxlength="15"
+        placeholder="What is your name?"
+      />
+      <input type="submit" value="login" />
+    </form>
+    <form id="todo-form">
+      <input
+        type="text"
+        placeholder="Write a To Do and Press Enter "
+        required
+      />
+    </form>
+    <ul id="todo-list"></ul>
+
+    <h2 id="clock">00:00</h2>
+    <h1 id="greeting" class="hidden"></h1>
+    <div id="quotes">
+      <span></span>
+      <span></span>
+    </div>
+  </body>
 </html>
