--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="js/quotes.js" defer></script>
     <script src="js/background.js" defer></script>
     <script src="js/todo.js" defer></script>
+    <script src="js/weather.js" defer></script>
+
     <title>MOMENTUM APP</title>
   </head>
   <body>
@@ -30,10 +32,13 @@
       />
     </form>
     <ul id="todo-list"></ul>
-
     <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <div id="quotes">
+      <span></span>
+      <span></span>
+    </div>
+    <div id="weather">
       <span></span>
       <span></span>
     </div>
